Update to Spring Boot 3, new h2, use graalvm, GH actions (#816)
* Handle database recreation errors better

* Handle different db usernames

* Improve shutdown

* Don't run startup problem detection in main thread

* Fix stats calculation with h2 2

* Fix unit tests

* Disable some tests not yet fixed (if ever)

* Use SCRIPT TO to backup database as it verifies integrity

* Only delete backups if a newer successful one exists

* Fix error while analysing log file for OOM errors

* Fix CSRF

* Log Spring stuff on INFO

* Add features for v5 to changelog

* Don't try to remove windows tray icon cause it results in a hang

* Fix notification history pagination

* Fix shutdown behavior, prevent misleading error messages

* Remove javax.annotation and .activation

* Fix baseConfig.yml

* First step to native build

Compile runs, executable can be started, but has errors. More work needed.

* First step to native build

RUns under windows, HtmlUnit error, great progress!

* Instantiate indexers and downloaders directly to make it work with native

BeanFactory.createBean and .autowireBean do not work

* Disable javascript in OpenPortChecker to fix charset error in native

* Test Github Actions

* Test Github Actions

* Test Github Actions

* Test Github Actions

* Adapt wrappers to support native images

* Update wrapper build to use docker containers

clean folder structure
Use v2 binaries for native support

* Add build scripts, remove circleCi

* Native build github actions

* Don't write yaml, use in-memory db in native build mode

* Upload native image artifact

* Test self-hosted runner

* Build on all three OSes

* Build on all three OSes

* Build on all three OSes

* Build macos

* Build windows

* Build windows and macos

* user proper paths for uploading artifacts

* user proper paths for uploading artifacts

* user proper paths for uploading artifacts

* All three native